# pyxir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  coverage.sh  setup.py  version.txt
conda/: README.md  environment.yml  environment2.yml
docker/default/: Dockerfile  README.md  docker_build.sh  docker_run.sh  setup_after_container_startup.sh
docker/default/install/: ubuntu_install_antlr.sh  ubuntu_install_python.sh
docker/install/: ubuntu_install_clang_format.sh
docker/vai/: Dockerfile  README.md  docker_build.sh  docker_run.sh  setup_after_container_startup.sh
docker/vai/install/: ubuntu_install_cmake.sh  ubuntu_install_llvm.sh
examples/: README.md  onnxruntime_resnet18v1_dpuv1.md  onnxruntime_resnet18v1_dpuv1.py
examples/brevitas/: dpucadx8g_brevitas_onnx.py  dpuczdx8g_brevitas_onnx.py  dpuv1_brevitas_onnx.py  dpuv2_brevitas_onnx.py
examples/tvm/: README.md  edge_resnet_18_board.py  edge_resnet_18_host.py
include/pyxir/: opaque_func.hpp  opaque_func_registry.hpp  pyxir.hpp  pyxir_api.hpp  type.hpp
include/pyxir/common/: px_stream.hpp  serializable.hpp  util.hpp  xbuffer.hpp
include/pyxir/contrib/: dpuv1.hpp
include/pyxir/ffi/: py_base.hpp  py_container.hpp  py_opaque_func.hpp  py_xattr.hpp  py_xbuffer.hpp  py_xgraph.hpp  py_xlayer.hpp  str_container.hpp
include/pyxir/frontend/: onnx.hpp
include/pyxir/graph/: xattr.hpp  xgraph.hpp  xlayer.hpp
include/pyxir/io/: io.hpp
include/pyxir/runtime/: compute_func.hpp  compute_func_factory.hpp  compute_func_factory_impl.hpp  compute_func_info.hpp  compute_func_registry.hpp  constants.hpp  kernel_func.hpp  kernel_func_factory.hpp  online_quant_compute_func.hpp  run_options.hpp  runtime.hpp  runtime_module.hpp  runtime_module_factory.hpp  runtime_module_factory_impl.hpp
python/: .gitignore
python/pyxir/: __import.py  __init__.py  _libpyxir.py  base.py  opaque_func.py  opaque_func_registry.py  target.py  target_registry.py  type.py
python/pyxir/compiler/: base_compiler.py
python/pyxir/contrib/: __init__.py
python/pyxir/frontend/: __init__.py
python/pyxir/generator/: tensorflow.py
python/pyxir/graph/: __init__.py  schedule.py  xgraph.py  xgraph_factory.py  xop.py  xop_registry.py
python/pyxir/io/: __init__.py  api.py  cvx.py  util.py
python/pyxir/model_tools/: __init__.py  base.py  model_ctx.py
scripts/: setup_petalinux.sh
src/pyxir/: opaque_func_registry.cpp  pyxir.cpp
tests/: CMakeLists.txt
tests/cpp/: compute_func_test.cpp  initialization_test.cpp  io_test.cpp  main_test.cpp  onnx_test.cpp  opaque_func_reg_test.cpp  px_stream_test.cpp  reg_opaque_func_str_test.py  reg_opaque_func_xgraph_test.py  test.onnx  util.hpp
tests/cpp/common/: xbuffer_test.cpp
tests/cpp/runtime/: online_quant_compute_func_test.cpp  run_options_test.cpp  runtime_module_test.cpp
tests/integration/: run.py  test_relay.py
tests/lint/: git-clang-format.sh
tests/scripts/: run_unittests.py  run_unittests.sh
tests/unit/: test_base.py  test_opaque_func.py  test_opaque_func_registry.py  test_target_registry.py
tests/unit/_libpyxir/: test_xgraph.py
tests/unit/contrib/: compilation_infra.py  test_dpucadf8h.py  test_dpucahx8h.py  test_dpucahx8l.py  test_dpucvdx8g.py  test_dpucvdx8h.py  test_dpuczdx8g.py  test_ultra96_op_support.py
tests/unit/contrib/dpucadx8g/: test_dpucadx8g.py  test_dpucadx8g_op_support.py
tests/unit/contrib/dpuczdx8g/: compilation_infra.py  test_dpu.py  test_ultra96_op_support.py
tests/unit/contrib/dpuv1/: test_dpuv1.py  test_dpuv1_op_support.py
tests/unit/contrib/dpuv2/: test_dpu.py  test_ultra96_op_support.py
tests/unit/frontend/onnx/: test_onnx.py  test_onnx_2_xlayer_registry.py  test_onnx_tools.py
tests/unit/frontend/onnx/ops/: onnx_ops_infra.py  test_onnx_l0_other.py  test_onnx_l11_quantization.py  test_onnx_l1_basic_nn.py  test_onnx_l2_convolution.py  test_onnx_l3_math_and_transform.py  test_onnx_l4_broadcast_and_reductions.py  test_onnx_l5_vision.py  test_onnx_l6_recurrent.py
tests/unit/frontend/tvm/: test_relay.py  test_relay_io.py
tests/unit/frontend/tvm/relay_tools/: test_relay_l0_other.py  test_relay_l10_temporary.py  test_relay_l1_basic.py  test_relay_l2_convolution.py  test_relay_l3_math_and_transform.py  test_relay_l4_broadcast_and_reductions.py  test_relay_l5_vision.py
tests/unit/graph/: test_xgraph.py  test_xgraph_factory.py
tests/unit/graph/graph_io/: test_xgraph_io.py
tests/unit/graph/layer/: test_xattr_dict.py  test_xlayer.py  test_xlayer_factory.py
tests/unit/graph/ops/: test_l1_basic_nn.py  test_l2_convolution.py  test_l3_math_and_transformations.py  test_l4_broadcast_and_reductions.py  test_l5_vision.py
tests/unit/graph/optimization/: test_optimizations.py
tests/unit/graph/partitioning/: test_xgraph_partitioning.py
tests/unit/graph/passing/: test_base_pass.py
tests/unit/graph/transformers/: test_add_explicit_output_layers.py  test_layout_transformation_pass.py  test_subgraph.py
tests/unit/io/: __init__.py  test_api.py
tests/unit/quantization/: decent_quantization_infra.py  quant.json  test_base_subgraph_quantizer.py  test_decent_quantizer.py  test_default_quantizer.py
tests/unit/quantization/mse_quantization/: test_mse_quantizer.py
tests/unit/quantization/simulation/: test1_quant.json  test_quant_sim_pass.py  xp0_quant.json
tests/unit/runtime/: test_base_runtime.py  test_rt_manager.py  test_runtime_factory.py
tests/unit/runtime/decentq_sim/: test_decentq_sim_runtime.py
tests/unit/runtime/numpy_rt/: test_rt_layer_np.py  test_rt_layer_np_conv2d.py  test_rt_layer_np_pool2d.py
tests/unit/runtime/tensorflow_rt/: test_rt_layer_tf.py  test_runtime_tf.py  test_x_2_tf_registry.py
tests/unit/runtime/tensorflow_rt/ops/: ops_infra.py  test_tf_l0_inputs_and_other.py  test_tf_l1_basic_nn.py  test_tf_l2_convolutions.py  test_tf_l3_math_and_transform.py  test_tf_l4_broadcast_and_reductions.py
tests/unit/shapes/: test_tensor_shape.py  test_tuple_shape.py
tests/unit/shared/: __init__.py  test_containers.py  test_hash_map.py  test_vector.py  test_xbuffer.py
tests/unit/targets/: __init__.py
(+205 files in other folders)
